# ApplyPilot

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260419_0001_create_mvp_core_schema.py  20260419_0002_expand_applications_schema.py  20260419_0003_expand_contacts_and_tasks_schema.py  20260419_0004_add_note_types.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: applications.py  auth.py  contacts.py  dashboard.py  health.py  tasks.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  application.py  application_contact.py  contact.py  note.py  profile.py  task.py
backend/app/schemas/: application.py  auth.py  contact.py  dashboard.py  note.py  task.py
backend/app/services/: applications.py  auth.py  contacts.py  dashboard.py  notes.py  profiles.py  tasks.py
backend/applypilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_applications.py  test_auth.py  test_contacts.py  test_dashboard.py  test_notes.py  test_tasks.py
docs/: api.md  architecture.md  deployment.md  product.md  setup.md
frontend/: .env.example  README.md  middleware.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  applications.ts  contacts.ts  dashboard.ts  (+4 more)
(+36 files in other folders)
